# src/controllers/v1/modules/category/category.controller.ts
@@ -1,7 +1,7 @@
 import { Request, Response } from 'express';
 import { CategoryService } from '@/services/v1/modules/category/category.service';
 import { StatusCode } from '@/constants/status-code.constants';
-import { paginationQuerySchema } from '@/validations/core/pagination.validations';
+import { categoryPaginationSchema } from '@/validations/v1/modules/category.validations';
 
 export class CategoryController {
   protected categoryService: CategoryService;
@@ -11,8 +11,9 @@ export class CategoryController {
   }
 
   index = async (req: Request, res: Response) => {
-    const { page, limit } = paginationQuerySchema.parse(req.query);
-    const result = await this.categoryService.index(page, limit);
+    const { query } = categoryPaginationSchema.parse(req);
+    const finalLimit = query.perPage ?? query.limit;
+    const result = await this.categoryService.index(query.page, finalLimit);
 
     res.status(StatusCode.OK).json({
       message: 'Categorias encontradas com sucesso.',
